# shortsforge

./: .env.example  Dockerfile  Dockerfile.dev  INSTALL.md  README.md  SETUP_GUIDE.html  deploy_gcp.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
graph/: compliance_supervisor.py  edges.py  nodes.py  parser.py  pipeline.py  state.py  universes.py
